<resources>
    <string name="app_name">POS</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="blueTechnology">Blue</string>
    <string name="Navigation_drawer_open">Navigation</string>
    <string name="Navigation_drawer_close">Navigation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Dummy item name -->
    <string name="hamburger">Hamburger</string>
    <string name="price">Price</string>
    <string name="name_user">VAN-THEY</string>

    <!-- Product in Navigation drawer -->
    <string name="setting_account">Manage account</string>
    <string name="sign_out">Sign out</string>
    <string name="shopping_cart">cart</string>
    <string name="user_position">user position</string>
    <string name="dashboard">Dashboard</string>
    <string name="sale">Sale</string>
    <string name="category">Category</string>
    <string name="report">Report</string>
    <string name="inventory">Inventory</string>
    <string name="setting">Setting</string>
    <string name="currency">Currency Exchange</string>
    <string name="company_information">Company Information</string>
    <string name="system_language">Language</string>
    <string name="company_number">Phone Number</string>
    <string name="company_address">Address</string>
    <string name="Invoice_Preference">Invoice Preference</string>
    <string name="change_logo">Change Logo</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_category">Add Category</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="KhmerLanguage">Khmer</string>
    <string name="EnglishLanguage">English</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="product">Product</string>
    <string name="search_product">Search Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_qty">Product Quantity</string>
    <string name="product_cost">Product Cost</string>
    <string name="product_price">Product Price</string>
    <string name="product_code">Product Code</string>
    <string name="product_category">Product Category</string>
    <string name="add_product">Add Product</string>
    <string name="admin">Admin</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="position">Position</string>
    <string name="sex">Sex</string>
    <string name="address">Address</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="manager">Manager</string>
    <string name="seller">Seller</string>
    <string name="cashier">Cashier</string>
    <string name="permission">Permission</string>
    <string name="delete_item">Delete Item</string>
    <string name="allow_all">Allow All</string>
    <string name="discount">Discount</string>
    <string name="update_item">Update Item</string>
    <string name="add_item">Add Item</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone Number</string>
    <string name="supplier_address">Supplier Address</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="supplier_sex">Supplier Sex</string>
    <string name="payment">Payment</string>
    <string name="inventory_location">Inventory Location</string>
    <string name="inventory_title">Title</string>
    <string name="product_tax">Product Tax</string>
    <string name="language">Language</string>
    <string name="unit">Unit</string>
    <string name="dot">.</string>
    <string name="add_unit">Add Unit</string>
    <string name="qty">Qty</string>
    <string name="no">No</string>
    <string name="item">Item</string>
    <string name="subtotal">Amount</string>
    <string name="phone_number">Phone Number</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="pay">Pay</string>
    <string name="item_count">0</string>
    <string name="add">+</string>
    <string name="subStruct">-</string>
    <string name="dollar">$</string>
    <string name="out">Out</string>
    <string name="no_product">No Product</string>
    <string name="no_category">No Category</string>
    <string name="no_inventory">No Inventory</string>
    <string name="no_supplier">No Supplier</string>
    <string name="no_unit">No Unit</string>
    <string name="product_discount">Product Discount</string>
    <string name="sale_discount">Sale Discount %</string>
    <string name="total">Total $</string>
    <string name="sale_subtotal">Subtotal $</string>
    <string name="Please_Input_Unit_Name">Please Input Unit Name</string>
    <string name="Please_Input_Category_Name">Please Input Category Name</string>
    <string name="Please_Input_Supplier">Please Input Supplier</string>
    <string name="Please_Input_Product">Please Input Product</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="riel">៛</string>
    <string name="equal">=</string>
    <string name="riel_money">Riel :</string>
    <string name="Description">Description</string>
    <string name="Sale">Sale</string>
    <string name="preference">Preference</string>
    <string name="expense">Expense</string>
    <string name="company_name">Company Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone Number</string>
    <string name="add_customer">Add Customer</string>
    <string name="no_customer">No Customer</string>
    <string name="change">Change</string>
    <string name="Please_Input_Inventory">Please Input Inventory</string>
    <string name="Please_Input_Customer">Please Input Customer</string>
    <string name="Please_Input_User">Please Input User</string>
    <string name="Change_price">Change Price</string>
    <string name="account_management">Account Management</string>
    <string name="app_default">Default User</string>
    <string name="pay_by_card">Card</string>
    <string name="pay_by_cash">Cash</string>
    <string name="go_dashboard">dashboard</string>
    <string name="balance">Balance</string>
    <string name="double_dot"> : </string>
    <string name="Cash_drawer">Cash Drawer</string>
    <string name="bill_to">Bill To :</string>
    <string name="phone">Phone</string>
    <string name="filter_product">Filter product</string>
    <string name="expense_title">Expense Title</string>
    <string name="Cannot_delete_this_category_products">Cannot delete cause this category contain products</string>
    <string name="Deleted">Deleted</string>
    <string name="disc">Disc</string>
    <string name="charge">Charge</string>
    <string name="total_riel">Total រ</string>
    <string name="percentage">%</string>
    <string name="dollar_money">Dollar :</string>
    <string name="due">Due</string>
    <string name="price_dollar">Price $</string>
    <string name="paid_dollar">Paid $</string>
    <string name="due_dollar">Due $</string>

</resources>