<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_items_cart"
        android:icon="@drawable/ic_add_shopping_cart"
        android:title="@string/shopping_cart"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_language"
        android:icon="@drawable/ic_language"
        android:title="@string/language"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_category"
        android:icon="@drawable/ic_form_add"
        android:title="@string/add_category"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_unit"
        android:icon="@drawable/ic_form_add"
        android:title="@string/add_unit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_inventory"
        android:icon="@drawable/ic_form_add"
        android:title="@string/add_inventory"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_product"
        android:icon="@drawable/ic_form_add"
        android:title="@string/add_product"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_supplier"
        android:icon="@drawable/ic_form_add"
        android:title="@string/add_supplier"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_customer"
        android:icon="@drawable/ic_person_add"
        android:title="@string/add_customer"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>