<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:id="@+id/custom_numRow_item_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/custom_image_item_sale"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_image" />

    <TextView
        android:id="@+id/custom_name_item_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/item"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/custom_price_item_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/custom_qty_item_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/qty"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/custom_discount_item_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/discount"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/custom_subtotal_item_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/subtotal"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/custom_delete_item_sale"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_delete" />

</LinearLayout>