<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_add_supplier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplier_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSupplier_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/supplier_sex" />

    <RadioGroup
        android:id="@+id/group_supplier_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/supplierMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/Egyptian_Blue"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/supplierFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/Egyptian_Blue"
            android:text="@string/female" />
    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/supplier_phone" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSupplier_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/supplier_address" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSupplier_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelSupplier"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Deep_Saffron"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteSupplier"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Coral_Red"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:visibility="gone" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateSupplier"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Lime_Green"
            android:text="@string/update"
            android:textAllCaps="false"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveSupplier"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Egyptian_Blue"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
