<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:gravity="center">

    <TableRow>

        <TextView
            android:id="@+id/custom_qty_item_sale"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/qty"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/custom_name_item_sale"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/Description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/custom_price_item_sale"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/custom_discount_item_sale"
            android:layout_column="2"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/discount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/custom_subtotal_item_sale"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/subtotal"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/custom_delete_item_sale"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_delete" />
    </TableRow>
</TableLayout>